Fixed Dropdown Z-index, Project File Route, and LinFit not sticking between refreshes

--- a/src/styles/Squidink/dropdown-custom.scss
+++ b/src/styles/Squidink/dropdown-custom.scss
@@ -1,6 +1,7 @@
 .menu-container-custom {
   position: relative;
-  padding: 10px
+  padding: 10px;
+  z-index: 2;
 }
 
 .menu-custom {
